2002-06-27  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (EnclosingType): Update logic to work for classes
	read from .class file - bug 2995.

2002-06-27  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CanCastConvert): Don't allow conversion to null
	type - bug 2982.

2002-06-24  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/control.cpp:
	* src/decl.cpp:
	* src/expr.cpp:
	* src/symbol.cpp:
	* src/symbol.h: Fix formatting, comments, and improve some naming
	issues; but no code changes.

2002-06-19  Eric Blake  <ebb9@email.byu.edu>

	* src/control.cpp (ProcessHeaders):
	* src/decl.cpp (ProcessSuperTypeDependences, SetDefaultSuperType),
	(ProcessTypeHeader, CompleteSymbolTable): Fix core dump of Jacks
	test 8.1.4-object-1.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (CompileConstructor),
	(GenerateClassAccessMethod): Make compile output decisions based
	on target JVM level, not source JDK level.
	(EmitSwitchStatement): Remove dead code in switch statements -
	followup to patch 279.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ConstructorAccessCheck): Fix regressions not
	covered by patch 280 - still bug 2899.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.h (HasEnclosingInstance):
	* src/symbol.cpp (HasEnclosingInstance): 
	* src/expr.cpp (CreateAccessToType, ProcessAmbiguousName),
	(ProcessThisExpression, ProcessSuperExpression): Fix test of
	enclosing instances to not bypass uninitialized current
	instance. This is on advice from Gilad Bracha (author of JLS 2nd
	edition), and highlights some bad Jacks tests - bug 2920.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (AppendString): 
	* src/expr.cpp (ProcessAssignmentExpression):
	* src/lookup.cpp (EndsInKnownString): Correctly concatenate
	1-character constant strings - bug 2919.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/expr.cpp: Formatting.